[gd_scene load_steps=6 format=3 uid="uid://df7dw0xl50u27"]

[ext_resource type="Script" uid="uid://b8g7qlxtp7d47" path="res://Inventory/Buildables/Scripts/crafting_bench.gd" id="1_yt0xv"]
[ext_resource type="Texture2D" uid="uid://vssgpuslcim7" path="res://UI/CraftingIcons/Stations.png" id="2_7l0rp"]
[ext_resource type="PackedScene" uid="uid://bx6ucca5ytue1" path="res://UI/CraftingStuff/CraftingUI.tscn" id="2_a57r4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a57r4"]
radius = 23.0217

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt0xv"]
size = Vector2(24, 20)

[node name="CraftingBench" type="StaticBody2D"]
script = ExtResource("1_yt0xv")
crafting_ui_scene = ExtResource("2_a57r4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7l0rp")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_a57r4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_yt0xv")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
